# cpp-doom

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  doomkeys.hpp  main.cpp  readme.md
core/: english.hpp  event.hpp  game_data.cpp  game_data.hpp  math.hpp  radians.hpp  real.hpp  units.hpp  vec.hpp  wad_types.hpp
game/: arena.cpp  arena.hpp  demo_screen.cpp  demo_screen.hpp  level.cpp  level.hpp  mobj.hpp  system.cpp  system.hpp
grfx/: gfx_settings.hpp  grfx.hpp  icon.cpp  icon.hpp  patch.hpp  screen_size.hpp  sdl_system.cpp  sdl_system.hpp  system.cpp  system.hpp
menu/: draw_text.cpp  draw_text.hpp  system.cpp  system.hpp
rndr/: bsp_renderer.cpp  bsp_renderer.hpp  clip_range_array.hpp  column.cpp  column.hpp  context.hpp  frame.hpp  lighting_tables.hpp  sky.hpp  system.cpp  system.hpp  texture_info.hpp  trigonometry.cpp  trigonometry.hpp  view.hpp  visplane.cpp  visplane.hpp
stdx/: fold.hpp  iterator_interface.hpp  on_exit.hpp  overload.hpp  to.hpp
